with stable and preview parts of java21